--- a/styles/style.css
+++ b/styles/style.css
@@ -9,14 +9,70 @@ html, body {
     padding: 0;
 }
 
-header {
-
-}
-
 main {
-
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    background: #D9DBF1;
+    justify-content: space-between;
+    align-items: center;
 }
   
-footer {
+h3 {
+    margin: 0.15em;
+    color: ghostwhite;
+    font-size: 1.5em;
+    font-family: 'bree', sans-serif;
+    font-weight: 800;
+    font-style: italic;
+}
 
+.dropdown-container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 10px;
+    right: 10%;
+    color: whitesmoke;
+}
+
+.sign-container {
+    background: #03440C;
+    width: 100%;
+    height: 285px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'kyrial-display-pro',sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    color: ghostwhite;
+    border-radius: 50% 50% 0 0;
+    box-shadow: 35px 15px 5px #FCAB10,
+                -25px -5px 3px #FCAB10,
+                0 0 500px #FCAB10;
+}
+
+.sign-board {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    height: 150px;
+    background: #9FC490;
+    border: 5px solid #C0DFA1;
+    border-radius: 1em;
+    align-items: center;
+    position: relative;
+    z-index: 0;
+}
+
+.sign-pole {
+    width: 15px;
+    height: 125px;
+    background: #CCC9E7;
+    border: 5px solid #59656F;
+    border-top: none;
+    border-radius: 3px;
 }
