--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,6 @@ html, body {
     width: 100%;
     margin: 0;
     padding: 0;
-    background: #D9DBF1;
 }
 
 main {
@@ -15,8 +14,22 @@ main {
     height: 100%;
     display: flex;
     flex-direction: column;
+    background: #D9DBF1;
+    font-family: 'kyrial-display-pro',sans-serif;
+    font-weight: 700;
     justify-content: space-between;
     align-items: center;
+}
+
+input,
+button,
+select,
+p {
+    text-align: center;
+    font-family: 'kyrial-display-pro',sans-serif;
+    font-weight: 700;
+    color: forestgreen;
+    cursor: pointer;
 }
   
 h3 {
@@ -33,7 +46,17 @@ h3 {
 
 .dropdown-container {
     display: flex;
-    color: whitesmoke;
+    color: dodgerblue;
+    position: relative;
+    z-index: 5;
+}
+
+.slogan-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 label {
@@ -41,17 +64,16 @@ label {
 }
 
 .sign-container {
-    background: #03440C;
     width: 100%;
     height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    font-family: 'kyrial-display-pro',sans-serif;
-    font-weight: 700;
     color: ghostwhite;
-
+    background: darkolivegreen;
+    position: relative;
+    bottom: 150px;
 }
 
 .sign-board {
@@ -64,9 +86,9 @@ label {
     border-radius: 1em;
     align-items: center;
     position: relative;
-    z-index: 0;
-    left: 250px;
-    bottom: 65px;
+    bottom: 15px;
+    left: 275px;
+    z-index: 5;
 }
 
 .sign-board span {
@@ -81,15 +103,13 @@ label {
     border-top: none;
     border-radius: 0 0 3px 3px;
     position: relative;
-    left: 250px;
-    bottom: 65px;
+    bottom: 15px;
+    left: 275px;
 }
 
 .cityscape-container {
     display: flex;
     align-items: flex-end;
-    position: relative;
-    top: 50px;
 }
 
 .structure1 {
@@ -104,6 +124,9 @@ label {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat(7, 1fr);
     justify-content: center;
+    position: relative;
+    bottom: 100px;
+    z-index: 3;
 }
 
 .structure2 {
@@ -118,6 +141,9 @@ label {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat(5, 1fr);
     margin: 0 20px;
+    position: relative;
+    bottom: 100px;
+    z-index: 3;
 }
 
 .structure3 {
@@ -133,6 +159,9 @@ label {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
     justify-content: center;
+    position: relative;
+    bottom: 100px;
+    z-index: 3;
 }
 
 .window {
@@ -148,37 +177,46 @@ label {
 
 .mountain-container {
     display: flex;
-    align-items: flex-end;
-    position: relative;
-    top: 250px;
+    align-items: flex-end;    
 }
 
-.triangle1 {
+.mountain1 {
     width: 0;
     height: 0;
     border-left: 100px solid transparent;
     border-right: 100px solid transparent;
     border-bottom: solid lightsteelblue 250px;
+    position: relative;
+    top: 100px;
+    z-index: 1;
 }
 
-.triangle2 {
+.mountain2 {
     width: 0;
     height: 0;
     border-left: 125px solid transparent;
     border-right: 125px solid transparent;
     border-bottom: solid cornflowerblue 300px;
+    position: relative;
+    top: 100px;
+    z-index: 1;
 }
 
-.triangle3 {
+.mountain3 {
+    position: relative;
+    z-index: 0;
     width: 0;
     height: 0;
     border-left: 100px solid transparent;
     border-right: 100px solid transparent;
     border-bottom: solid lavender 250px;
+    position: relative;
+    top: 100px;
+    z-index: 1;
 }
 
 .climate-container {
-    position: relative;
+    position: absolute;
     top: 150px;
 }
 
@@ -190,7 +228,8 @@ label {
     box-shadow: 3px 3px 3px dimgray,
                 inset -2px -2px 3px lightskyblue;
     position: relative;
-    z-index: 4;
+    right: 200px;
+    z-index: 2;
 }
 
 .cloud::before {
@@ -218,10 +257,10 @@ label {
 }
 
 .sun {
-    position: absolute;
+    position: relative;
+    left: 215px;
+    bottom: 200px;
     z-index: 1;
-    bottom: -35px;
-    right: 200px;
     width: 200px;
     height: 200px;
     background: goldenrod;
@@ -236,8 +275,9 @@ label {
     flex-wrap: wrap;
     justify-content: center;
     position: relative;
-    left: 50px;
-    top: 15px;
+    bottom: 180px;
+    right: 150px;
+    z-index: 2;
 }
 
 .rain {
@@ -252,4 +292,15 @@ label {
 
 .visibility {
     visibility: hidden;
+}
+
+#statistics p {
+    color: aliceblue;
+    position: relative;
+    bottom: 35px;
+    z-index: 5;
+}
+
+@media only screen and (max-width: 650px) {
+    /* Don't even attempt it */
 }
