--- a/styles/style.css
+++ b/styles/style.css
@@ -54,6 +54,8 @@ h3 {
     justify-content: center;
     align-items: center;
     text-align: center;
+    position: relative;
+    z-index: 5;
 }
 
 label {
@@ -220,7 +222,6 @@ label {
 
 .climate-container {
     position: absolute;
-    /* top: 150px; */
 }
 
 .cloud {
